# next-ref

./: .gitignore  README.md  next-ref.cabal
src/Control/Concurrent/: NextRef.hs
test/: Spec.hs
