name:                next-ref
version:             0.1.0.1
synopsis:            A concurrency primitive for a slow consumer.
description:         A concurrency primitive for a slow consumer that can tolerate missing some updates.
license:             BSD3
license-file:        LICENSE
author:              Jonathan Fischoff
maintainer:          jonathangfischoff@gmail.com
copyright:           2016 skedge.me
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Control.Concurrent.NextRef
  build-depends: base >= 4.6 && < 5
               , stm
  default-language:    Haskell2010

test-suite next-ref-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , next-ref
                     , hspec
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

